--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -61,7 +61,7 @@ jobs:
       #   with:
       #     token: ${{ secrets.CODECOV_TOKEN }}
 
-  code-standard-tests:
+  code-standard-tests-phpstan:
     runs-on: ubuntu-latest
     steps:
       - uses: shivammathur/setup-php@v2
@@ -85,78 +85,28 @@ jobs:
       - name: Check code standards
         run: ./vendor/bin/phpstan analyse app
 
-  browser-tests:
+  code-style-pint:
     runs-on: ubuntu-latest
-
-    services:
-      mysql:
-        image: mysql:8.0
-        env:
-          MYSQL_ALLOW_EMPTY_PASSWORD: yes
-          MYSQL_DATABASE: db
-        ports:
-          - 3306:3306
-        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
-
-    env:
-      APP_URL: "http://127.0.0.1:8000"
-      DB_HOST: 127.0.0.1
-      DB_PORT: 3306
-      DB_DATABASE: db
-      DB_USERNAME: root
-      DB_PASSWORD: ""
-
     steps:
       - uses: shivammathur/setup-php@v2
         with:
           php-version: '8.1'
 
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
       - name: Copy .env
         run: php -r "file_exists('.env') || copy('.env.example', '.env');"
 
-      - name: Install Composer Dependencies
-        run: composer install --no-progress --prefer-dist --optimize-autoloader
+      - name: Install Dependencies
+        run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
 
-      - name: Generate Application Key
-        run: php artisan key:generate
+      # You may want to make sure that your project follows a certain code
+      # standard.
+      # The below requires
+      # https://github.com/squizlabs/PHP_CodeSniffer package to be installed.
+      # For your reference: https://laravel.com/docs/contributions#coding-style
+      # You can define the rules in your phpcs.xml file.
+      - name: Check code style
+        run: ./vendor/bin/pint
 
-      - name: Directory Permissions
-        run: chmod -R 777 storage bootstrap/cache
 
-      - name: Upgrade Chrome Driver
-        run: php artisan dusk:chrome-driver `/opt/google/chrome/chrome --version | cut -d " " -f3 | cut -d "." -f1`
-
-      # Make sure chrome driver is running before executing the browser test.
-      - name: Start Chrome Driver
-        run: ./vendor/laravel/dusk/bin/chromedriver-linux &
-
-      - name: Run Laravel Server
-        run: php artisan serve --no-reload &
-
-      - name: Run Dusk Tests
-        run: php artisan dusk --debug --verbose
-
-      # The below will upload screenshots and logs that will help you to debug
-      # what has caused the test failure in CI.
-      - name: Upload Screenshots
-        if: failure()
-        uses: actions/upload-artifact@v2
-        with:
-          name: screenshots
-          path: tests/Browser/screenshots
-
-      - name: Upload Console Logs
-        if: failure()
-        uses: actions/upload-artifact@v2
-        with:
-          name: console
-          path: tests/Browser/console
-
-      - name: Upload App Logs
-        if: failure()
-        uses: actions/upload-artifact@v2
-        with:
-          name: app
-          path: storage/logs
